<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/grey"
        android:fontFamily="@font/sweet_romance"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <TextView
                    android:id="@+id/nameTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/louis_george_cafe"
                    android:text="@string/name"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/ast1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:layout_marginLeft="5dp"
                    android:text="@string/ast" />

                <Spinner
                    android:id="@+id/dropDown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown" />

                <EditText
                    android:id="@+id/nameInpt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/nHint"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:id="@+id/contactTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/louis_george_cafe"
                    android:text="@string/contact"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/ast2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:layout_marginLeft="5dp"
                    android:text="@string/ast" />

                <EditText
                    android:id="@+id/contactInpt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/cHint"
                    android:inputType="number"
                    android:maxLength="8" />
            </LinearLayout>

            <ImageView
                android:id="@+id/img1"
                android:layout_width="wrap_content"
                android:layout_height="279dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/luke_barky_pexels" />

            <LinearLayout
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dateTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/louis_george_cafe"
                    android:text="@string/date"
                    android:textSize="20sp" />

                <DatePicker
                    android:id="@+id/dPicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="-10dp"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    android:padding="10dp" />
                <!--android:headerBackground="@color/black"-->

                <TextView
                    android:id="@+id/timeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/louis_george_cafe"
                    android:text="@string/time"
                    android:textSize="20sp" />

                <TimePicker
                    android:id="@+id/tPicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:timePickerMode="spinner" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/pax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:id="@+id/paxTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/louis_george_cafe"
                    android:text="@string/pax"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/ast3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:layout_marginLeft="5dp"
                    android:text="@string/ast" />

                <EditText
                    android:id="@+id/paxInpt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:hint="2"
                    android:inputType="number"
                    android:maxLength="2" />

                <ToggleButton
                    android:id="@+id/smokeTgl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/louis_george_cafe"
                    android:textOff="@string/non_smoking_area"
                    android:textOn="@string/smoking_area" />
            </LinearLayout>

            <TextView
                android:id="@+id/prompt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/imptSA" />

            <TextView
                android:id="@+id/prompt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/imptR" />

            <LinearLayout
                android:id="@+id/btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:text="@string/reset" />

                <Button
                    android:id="@+id/subReserve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:text="@string/submit_reservation" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>